Module Profile (parte Final), Croppie funcionando correctamente. Mejora de sintaxis en el main.js y modal.js, pequeña limpieza

--- a/client/styles/sidebar.css
+++ b/client/styles/sidebar.css
@@ -385,7 +385,7 @@
 
 .croppie-controls {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     margin-top: 10px;
 }
